--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,13 @@
 body {
   margin: 0;
   padding: 0;
+  min-height: 100vh;
+}
+
+#login {
+  max-width: 400px;
+  padding: 16px;
+  margin: auto;
+  position: relative;
+  top: 15vh;
 }
